--- a/employee/emp_register/templates/emp_register/employee_form.html
+++ b/employee/emp_register/templates/emp_register/employee_form.html
@@ -5,8 +5,16 @@
 <form action="" method="post" autocomplete="off">
     {% csrf_token %}
     {{ form|crispy }}
-
-    <button type="submit" class="btn btn-success"><i class="fa-solid fa-database"></i>  Submit</button>
+    <div class="row">
+        <div class="col-md-8">
+            <button type="submit" class="btn btn-success btn-block btn-lg"><i class="fa-solid fa-database"></i>  Submit</button>
+        </div>
+        <div class="col-md-4">
+            <a href="{% url 'employee_list'%}" class="btn btn-secondary btn-block btn-lg">
+                <i class="fas fa-stream"> Back to list</i>
+            </a>
+        </div>
+    </div>
 </form>
 {% endblock content %}
 
