--- a/employee/emp_register/templates/emp_register/employee_list.html
+++ b/employee/emp_register/templates/emp_register/employee_list.html
@@ -7,6 +7,9 @@
             <td>Full Name</td>
             <td>Mobile</td>
             <td>Position</td>
+            <td>
+                <a href="{% url 'employee_insert' %}" class="btn btn-outline-success">Add New</a>
+            </td>
         </tr>
     </thead>
     <tbody>
@@ -15,6 +18,17 @@
                 <td>{{employee.fullname}}</td>
                 <td>{{employee.mobile}}</td>
                 <td>{{employee.position}}</td>
+                <td>
+                    <a href="{% url 'employee_update' employee.id %}" class="btn text-secondary px-0">
+                        <i class="far fa-edit fa-lg"></i>
+                    </a>
+                    <form action="{% url 'employee_delete' employee.id %}" method="post" class="d-inline">
+                        {% csrf_token %}
+                        <button type="submit" class="btn">
+                            <i class="far fa-trash-alt fa-lg text-danger float-right"></i>
+                        </button>
+                    </form>
+                </td>
             </tr>
         {% endfor %}
     </tbody>
