--- a/employee/emp_register/templates/emp_register/employee_form.html
+++ b/employee/emp_register/templates/emp_register/employee_form.html
@@ -11,7 +11,7 @@
         </div>
         <div class="col-md-4">
             <a href="{% url 'employee_list'%}" class="btn btn-secondary btn-block btn-lg">
-                <i class="fas fa-stream"> Back to list</i>
+                <i class="fas fa-stream"> To the list</i>
             </a>
         </div>
     </div>
